<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Supp/Medi Planer</string>
    <string name="weeks">Wochen</string>
    <string name="start_date">Startdatum</string>
    <string name="plan_settings">Plandaten einstellen</string>
    <string name="back">zurück</string>
    <string name="keep">übernehmen</string>
    <string name="start_week">Startwoche</string>
    <string name="start_day">Starttag</string>
    <string name="add_substance">Substanz hinzufügen</string>
    <string name="week">Woche</string>
    <string name="duration">Dauer</string>
    <string name="substance">Substanz</string>
    <string name="amount">Menge</string>
    <string name="intake_schema">Einnahmeschema</string>
    <string name="frontload">Frontload</string>
    <string name="frontload_amount">Frontloadmenge</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="endWeek">Endwoche</string>
    <string name="end_day">Endtag</string>
    <string name="add">hinzufügen</string>
    <string name="delete_all_substances">alle Substanzen entfernen</string>
    <string name="day">Tag</string>
    <string name="start">Start</string>
    <string name="end">Ende</string>
    <string name="date">Datum</string>
    <string name="load_plan">Plan laden</string>
    <string name="create_new_plan">neuen Plan erstellen</string>
    <string name="delete_plan">Plan löschen</string>
    <string name="delete_substance">Substanz entfernen</string>
    <string name="plan">Plan</string>
    <string name="plan_name">Planname</string>
    <string name="error_no_current_plan">Aktuell ist keine Plan ausgewählt. Bitte fügen sie zuerst einen neuen Plan hinzu oder laden sie eine bereits existierende.</string>
    <string name="load">laden</string>
    <string name="edit_plan">Plan bearbeiten</string>
    <string name="add_plan">Plan hinzufügen</string>
    <string name="view">Ansicht</string>
    <string name="view_graph">Konzentrationsverlauf</string>
    <string name="view_table">Tabelle</string>
    <string name="data_is_calculated_text">Daten werden berechnet...</string>
    <string name="working">Arbeitet...</string>
    <string name="selected_substances_to_delete">Substanzen</string>
    <string name="accept">übernehmen</string>
    <string name="delete_selected">selektierte Elemente löschen</string>
    <string name="delete_substances">Substanzen löschen</string>
    <string name="total">Gesamt</string>
    <string name="intake_reminder">Einnahme-Erinnerer</string>    
    <string name="open_planplaner">Planplaner öffnen</string>
    <string name="remove_reminder">Erinnerung entfernen</string>
    <string name="settings">Einstellungen</string>
    <string name="edit_substances">Substanzen bearbeiten</string>
    <string name="status">Status</string>
    <string name="colon">:</string>
    <string name="status_deactivated">deaktiviert</string>
    <string name="status_running">laufend</string>
    <string name="status_future">zukünftig</string>
    <string name="status_finished">fertig</string>
    <string name="deactivate_plan">Plan deaktivieren</string>
    <string name="name">Name</string>
    <string name="base_substance">Basissubstance</string>
    <string name="delete">löschen</string>
    <string name="save">speichern</string>
    <string name="change_view">Ansicht wechseln</string>
    <string name="show_view_graph">Konz.-Verlauf anzeigen</string>
    <string name="show_view_table">Tabelle anzeigen</string>
    
    <string name="prefHourTitle">Stunde</string>
	<string name="prefHourText">Stunde zu der die Erinnerung erscheinen soll</string>
	<string name="prefMinuteTitle">Minute</string>
	<string name="prefMinuteText">Minute zu der die Erinnerung erscheinen soll</string>
	
	<string name="prefReminderTitle">Erinnerung</string>
	<string name="prefReminderText">Erinnerung an die Einnahme einer aktivierten Plan</string>
	<string name="prefMaxWeekCountTitle">Max. Wochenzahl</string>
	<string name="prefMaxWeekCountText">Maximale Wochenzahl im Dialog \"Substanz hinzufügen\"</string>
	<string name="prefMaxFrontloadDayTitle">Max. Frontloadtag</string>
	<string name="prefMaxFrontloadDayText">Maximale Zahl für den Frontloadtag im Dialog \"Substanz hinzufügen\"</string>
	
	<string name="next_intake_in">Nächste Einnahme in</string>
	<string name="frontloadDay">Tag Frontload</string>
	<string name="cant_delete_used_substance">Sie können kein Substanz entfernen welches in einer Plan verwendet wird!</string>
	<string name="edit_substance">Substanz bearbeiten</string>
	<color name="clickable_text">#FF0000</color>
	<string name="prefLanguageTitle">Sprache</string>
	<string name="prefLanguageText">Sprache einstellen</string>
	<string name="reminder_time_changed">Erinnerungszeiten haben sich geändert - wollen Sie alle bereits existierenden Alarme anpassen?</string>
	<string name="type">Typ</string>
	<string name="steroid">Steroid</string>
	<string name="supp">Supplement</string>
	<string name="reminder_time">Erinnerungszeit</string>
	<string name="step_size">Schrittweite</string>
	<color name="transparent">#00000000</color>
	<string name="PREF_MAX_WEEK_COUNT">prefMaxWeekCount</string>
	<string name="PREF_MAX_FRONTLOAD_DAY">prefMaxFrontloadDay</string>
	<string name="PREF_REMIND">prefRemind</string>
	<string name="PREF_REMIND_WITH_SOUND">prefRemindWithSound</string>
	<string name="PREF_REMIND_WITH_VIBRATE">prefRemindWithVibrate</string>
	<string name="PREF_HOUR">prefHour</string>
	<string name="PREF_MINUTES">prefMinutes</string>
	<string name="general">Allgemein</string>
	<string name="alert_general">Alarm - Allgemein</string>
	<string name="alert_standard_times">Alarm - Standardzeiten</string>
	<string name="SHARED_PREF_LAST_PLAN">lastPlan</string>
	<string name="I_KEY_ALARM_ID">alarm_id</string>
	<string name="I_KEY_COUNT">count</string>
	<string name="I_KEY_ENTRY_PREFIX">entry_</string>
	<string name="I_KEY_PLAN_ID">plan_id</string>
	<string name="filter">Graphfilter einstellen</string>
	<string name="select_substances_to_show">Substanzen für Graph</string>
	<string name="edit">bearbeiten</string>
	<string name="error_no_substances_exist">Es existieren keine Substanzen, daher ist diese Funktion nicht verfügbar. Fügen Sie zuerst Substanzen zur Datenbank hinzu.</string>
	<string name="mg">mg</string>
	<string name="unit">Einheit</string>
	<string name="pieces">Stücke</string>
	<string name="new_plan_standard_name">Plan</string>
	<string name="piece">Stück</string>
	<string name="show_table_graph_toggle">Graphtabelle ein-/ausblenden</string>
	<string name="link_data_in_graph">Graphdaten zusammenfügen</string>
	<string name="link">verlinken</string>
</resources>